@@ -58,7 +58,7 @@ cluster_collect <- function(pairs, select = NULL, clear = FALSE) {
   x <- rbindlist(x)
   # make sure x is put back in correct order
   x <- x[order(.id)]
-  attr(p, "x") <- x
+  setattr(p, "x", x)
   # Build a list of attributes we want to copy from the data.tables in tmp to 
   # the new pairs list
   attr_ignore <- c("x", "names", "row.names", "class")
@@ -67,9 +67,9 @@ cluster_collect <- function(pairs, select = NULL, clear = FALSE) {
   attr_names <- attr_names[!grepl("^\\.", attr_names)]
   # Copy/set attributes
   for (name in attr_names) {
-    attr(p, name) <- attr(tmp[[1]], name)
+    setattr(p, name, attr(tmp[[1]], name))
   }
-  class(p) <- c("pairs", class(p))
+  setattr(p, "class", c("pairs", class(p)))
   p
 }
 
