@@ -45,9 +45,9 @@ compare_vars.pairs <- function(pairs, variable, on_x = variable, on_y = on_x,
   # Compare
   res <- if (ncol(xv) == 1 && ncol(yv) == 1) 
     comparator(xv[[1]], yv[[1]]) else comparator(xv, yv)
-  attr(res, "comparator") <- comparator
-  attr(res, "on_x") <- on_x
-  attr(res, "on_y") <- on_y
+  setattr(res, "comparator", comparator)
+  setattr(res, "on_x", on_x)
+  setattr(res, "on_y", on_y)
   # Assign result of comparison to pairs
   if (is.data.table(res) || is.data.frame(res)) {
     for (col in names(res)) {
